--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 ---
 layout: base
 ---
+
+{% include header.html %}
+{% include values.html %}
+{% include apply.html %}
+{% include team.html %}
+{% include social-media.html %}
