--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: base
 ---
 
 {% include header.html %}
+{% include events.html %}
 {% include values.html %}
 {% include apply.html %}
 {% include team.html %}
